fix the nav bar shift

--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,8 @@ body {
   padding-top: 60px;
   margin: 0;
   padding-bottom: 30px;
+  align-items: center;
+  min-height: 100vh;
 }
 .nav-bar {
   display: flex;
